[package]
name = "yliw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
colored = "2.0"
chrono = "0.4"
toml = "0.5"
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
